# TestASM

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Main_JNI.c  Main_JNI_arm.c  Main_JNI_arm64.c  Main_seccomp.c  Main_seccomp_64.c  antiTest.c  const.h  hello-jnicallback.c  logging.h  seccommp.h
app/src/main/cpp/mini_io/: _open.c
app/src/main/java/com/example/hellojnicallback/: MainActivity.java
app/src/main/java/com/example/usb/: Test.java
app/src/main/res/layout/: activity_main.xml
lib/: bypass_dlfcn.c
